--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mariadb
-DB_HOST=162.240.98.118
-DB_PORT=30306
+DB_HOST=mysqldc
+DB_PORT=3306
 DB_DATABASE=base
 DB_USERNAME=root
 DB_PASSWORD="0Paulo123#"
